added changes in projectOverviewDto